--- a/src/App.css
+++ b/src/App.css
@@ -114,7 +114,7 @@
     flex-grow: 1;
     padding-top: 90px;
     padding-left: 280px;
-    padding-right: 290px;
+    padding-right: 10px;
     -webkit-transition: all .25s;
     -o-transition: all .25s;
     transition: all .25s;
@@ -161,15 +161,16 @@
 .row {
     --bs-gutter-x: 30px;
     --bs-gutter-y: 0;
-   /* display: flex;
-    flex-wrap: wrap;*/
-    margin-top: calc(var(--bs-gutter-y) * -1);
-    margin-right: calc(var(--bs-gutter-x)/ -2);
+    /*display: flex;*/
+    /*flex-wrap: wrap;*/
+    /*margin-top: calc(var(--bs-gutter-y) * -1);*/
+    /*margin-right: calc(var(--bs-gutter-x)/ -2);*/
     /*margin-left: calc(var(--bs-gutter-x)/ -2);*/
 }
 
-.background-image{
+img.background-image{
     width:100%;
+    margin:0;
 }
 
 /*.header {
