--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -77,6 +77,14 @@
     outline: 0;
 }
 
+.item:hover{
+    color: var(--theme-color);
+}
+
+.itemActive{
+    color: var(--theme-color);
+}
+
 /*.user_message {*/
 /*    border:1px solid;*/
 /*}*/
