--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -138,8 +138,11 @@
     outline: none !important;
 }
 
-
-
+.chat_form button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 /*.user_message {*/
 /*    border:1px solid;*/
