--- a/src/App.css
+++ b/src/App.css
@@ -121,7 +121,7 @@
 }
 
 .main-content .middle-sidebar-bottom {
-    display: -webkit-box;
+    /*display: -webkit-box;
     display: -webkit-flex;
     display: -moz-box;
     display: -ms-flexbox;
@@ -130,7 +130,7 @@
     -webkit-flex: 1;
     -moz-box-flex: 1;
     -ms-flex: 1;
-    flex: 1;
+    flex: 1;*/
 }
 
 .main-content .middle-sidebar-bottom {
@@ -153,9 +153,11 @@
 
 .middle-sidebar {
     padding-right: 0;
-    margin-right: auto;
-    margin-left: auto;
-    max-width: 960px;
+    /*margin-right: auto;
+    margin-left: auto;*/
+    /*max-width: 960px;*/
+    width: 100%;
+    padding-left: 15px;
 }
 
 .row {
